# CS401_project

./: .gitignore  README.md
src/detector_try/: CMakeLists.txt  package.xml
src/detector_try/config/: test_cases.json
src/detector_try/include/: detector.h
src/detector_try/launch/: detector.launch  video_test.launch
src/detector_try/rviz/: detector.rviz
src/detector_try/scripts/: record_test_video.py  standalone_test.py  test_detector.py  test_detector_node.py  video_publisher.py
src/detector_try/src/: detector_node.cpp
